--- a/includes/navbar.html
+++ b/includes/navbar.html
@@ -58,9 +58,9 @@
     <a href="/" class="logo">GoPatch</a>
     <ul class="nav-links">
       <li><a href="/">Home</a></li>
-      <li><a href="/services">Services</a></li>
-      <li><a href="/testimonials">Testimonials</a></li>
-      <li><a href="/contact">Contact</a></li>
+      <li><a href="/services.html">Services</a></li>
+      <li><a href="/testimonials.html">Testimonials</a></li>
+      <li><a href="/contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
