--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@
   .navbar .logo img {
     height: 36px;
     width: auto;
+    max-width: 100%;
+    object-fit: contain;
     display: block;
   }
 
