--- a/includes/navbar.html
+++ b/includes/navbar.html
@@ -2,11 +2,11 @@
   <nav class="navbar">
     <a href="/" class="logo">
       <img src="/assets/logo.png" alt="GoPatch Logo" />
-      GoPatch
+      <span>GoPatch</span>
     </a>
     <ul class="nav-links">
       <li><a href="/">Home</a></li>
-      <li><a href="/services.html">Services</a></li>
+      <li><a href="/patch-management.html">Services</a></li>
       <li><a href="/testimonials.html">Testimonials</a></li>
       <li><a href="/contact.html">Contact</a></li>
     </ul>
